# pasfmt

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  NOTICE.txt  README.md
.github/workflows/: deploy-web-demo.yaml  release.yml  rust.yaml
.github/workflows/setup/: action.yaml
core/: CHANGELOG.md  Cargo.toml
core/benches/: benchmark_lexer.rs
core/datatests/: .gitignore  Cargo.toml  build.rs
core/datatests/generators/: logical_line_parser.rs  mod.rs  optimising_line_formatter.rs
core/datatests/tests/: datatest.rs
core/datatests/tests/suites/: logical_line_parser.rs  mod.rs  optimising_line_formatter.rs
core/src/: formatter.rs  formatter_selector.rs  lang.rs  lib.rs  logging.rs  test_utils.rs  traits.rs
core/src/defaults/: lexer.rs  mod.rs  parser.rs  reconstructor.rs
core/src/defaults/parser/: token_consolidation_tests.rs  utility_tests.rs
core/src/rules/: conditional_directive_consolidator.rs  deindent_package_directives.rs  eof_newline.rs  formatting_toggle.rs  generics_consolidator.rs  ignore_asm_instructions.rs  ignore_non_unit_import_clauses.rs  import_clause_consolidator.rs  mod.rs  operator_spacing.rs  property_declaration_consolidator.rs  remove_repeated_newlines.rs  test_utils.rs  token_spacing.rs  uses_clause_consolidator.rs  uses_clause_formatter.rs
core/src/rules/optimising_line_formatter/: contexts.rs  debug.rs  mod.rs  parent_pointer_tree.rs  requirements.rs  types.rs
docs/: CONFIGURATION.md
front-end/: Cargo.toml
front-end/benches/: benchmark_submodules.rs
front-end/benches/modules/: pasfmt.toml
front-end/src/: lib.rs  main.rs  routine_exporter.rs
front-end/tests/: config.rs  cursor.rs  encoding.rs  file_discovery.rs  help.rs  idempotence.rs  io_error.rs  modes.rs  pasfmt.toml  tests.rs  utils.rs
front-end/tests/data/help/: config_help_col.txt  config_help_no_col.txt  help_col.txt  help_no_col.txt  long_help_col.txt  long_help_no_col.txt  update.sh
fuzz/: Cargo.toml
fuzz/fuzz_targets/: format.rs  parse.rs
misc/: generate_keyword_hash_fn.sh
orchestrator/: CHANGELOG.md  Cargo.toml
orchestrator/src/: command_line.rs  file_formatter.rs  formatting_orchestrator.rs  lib.rs
pasfmt-core/: Cargo.toml
pasfmt-core/src/: formatter.rs  formatter_selector.rs  lang.rs  lib.rs  traits.rs
pasfmt-core/src/defaults/: lexer.rs  mod.rs  parser.rs  reconstructor.rs
pasfmt-core/src/rules/: eof_newline.rs  mod.rs  remove_repeated_newlines.rs  remove_trailing_whitespace.rs  uses_clause_consolidator.rs  uses_clause_formatter.rs
pasfmt-front-end/: Cargo.toml
pasfmt-front-end/src/: main.rs
pasfmt-orchestrator/: Cargo.toml
pasfmt-orchestrator/src/: command_line.rs  file_formatter.rs  formatting_orchestrator.rs  lib.rs
web/: Cargo.toml  README.md
web/demo/: index.html  package-lock.json  package.json  vite.config.mts
web/demo/public/examples/: simple.pas
web/demo/src/: delphi.ts  index.ts
web/src/: lib.rs
