[workspace]

members = [
    "core",
    "orchestrator",
    "front-end",
    "core/datatests",
]

resolver = "2"

[workspace.dependencies]
anstyle = "1.0.7"
anyhow = "1.0.83"
assert_cmd = "2.0.14"
assert_fs = "1.1.1"
clap = "4.5.4"
codepage = "0.1.1"
config = { version = "0.15.4", default-features = false }
criterion = "0.5.1"
datatest-stable = "0.2.9"
encoding_rs = "0.8.34"
fxhash = "0.2.1"
glob = "0.3.1"
indoc = "2.0.5"
itertools = "0.12.1"
log = "0.4"
memchr = "2.7.2"
paste = "1.0.15"
predicates = "3.1.0"
rand = "0.8.5"
rayon = "1.10.0"
serde = "1.0.201"
spectral = { version = "0.6.0", default-features = false }
stderrlog = "0.6.0"
strum = "0.26.2"
strum_macros = "0.26.2"
toml = "0.8.12"
walkdir = "2.5.0"
windows-sys = "0.52.0"
yare = "3.0.0"
pretty_assertions = "1.4.0"
