[workspace]

members = [
    "core",
    "orchestrator",
    "front-end",
    "core/datatests",
]

resolver = "2"

[workspace.dependencies]
anstyle = "1.0.6"
anyhow = "1.0.79"
cfg-if = "1.0.0"
clap = "4.5.1"
codepage = "0.1.1"
criterion = "0.5.1"
datatest-stable = "0.2.6"
encoding_rs = "0.8.32"
figment = "0.10.14"
fxhash = "0.2.1"
glob = "0.3.1"
indoc = "2.0.1"
itertools = "0.12.1"
log = "0.4"
memchr = "2.6.0"
paste = "1.0.14"
rand = "0.8.5"
rayon = "1.7.0"
serde = "1.0.164"
serde_derive = "1.0.164"
spectral = { version = "0.6.0", default-features = false }
stderrlog = "0.5.4"
strum = "0.26.1"
strum_macros = "0.26.1"
thiserror = "1.0.56"
toml = "0.8.8"
walkdir = "2.3.3"
windows = "0.52.0"
yare = "1.0.2"