[package]
name = "pasfmt-core"
version = "0.2.0-dev"
edition = "2021"

[features]
_lang_types_from_str  = ["dep:strum", "dep:strum_macros"]

[dependencies]
itertools = { workspace = true }
log = { workspace = true }
memchr = { workspace = true }
cfg-if = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true, optional = true }
strum_macros = { workspace = true, optional = true }
fxhash = { workspace = true }

[dev-dependencies]
pasfmt-core = { path = ".", features = [ "_lang_types_from_str" ] }
spectral = { workspace = true }
indoc = { workspace = true }
yare = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
rand = { workspace = true }
paste = { workspace = true }

[[bench]]
name = "benchmark_lexer"
harness = false

[lib]
bench = false
