[package]
name = "pasfmt-core"
version = "0.4.0-rc2"
edition = "2021"

[features]
_lang_types_from_str  = ["dep:strum", "dep:strum_macros"]

[dependencies]
itertools = { workspace = true }
log = { workspace = true }
memchr = { workspace = true }
strum = { workspace = true, optional = true }
strum_macros = { workspace = true, optional = true }
fxhash = { workspace = true }

[dev-dependencies]
pasfmt-core = { path = ".", features = [ "_lang_types_from_str" ] }
spectral = { workspace = true }
indoc = { workspace = true }
yare = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
rand = { workspace = true }
paste = { workspace = true }
pretty_assertions = { workspace = true }

[[bench]]
name = "benchmark_lexer"
harness = false

[lib]
bench = false
