[package]
name = "pasfmt"
version = "0.3.0+dev"
edition = "2021"

[dependencies]
encoding_rs = { workspace = true, features = ["serde"] }
pasfmt-core = { path = "../core" }
pasfmt-orchestrator = { path = "../orchestrator" }
serde = { workspace = true }
serde_derive = { workspace = true }
stderrlog = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Globalization"] }
codepage = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
walkdir = { workspace = true }

[[bench]]
name = "benchmark_submodules"
harness = false

[lib]
bench = false
