[package]
name = "pasfmt-orchestrator"
version = "0.3.0+dev"
edition = "2021"

[dependencies]
clap = { workspace = true, features = ["derive"] }
encoding_rs = { workspace = true }
glob = { workspace = true }
pasfmt-core = { path = "../core" }
rayon = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
config = { workspace = true, features = ["toml"] }
anyhow = { workspace = true }
anstyle = { workspace = true }

[dev-dependencies]
yare = { workspace = true }
assert_fs = { workspace = true }
indoc = { workspace = true }
serde_derive = { workspace = true }
spectral = { workspace = true }

[lib]
bench = false
