[package]
name = "datatests"
version = "0.0.0"
edition = "2021"

[dependencies]
datatest-stable = { workspace = true }
pasfmt-core = { path = "..", features = [ "_lang_types_from_str" ] }
spectral = { workspace = true }
indoc = { workspace = true }
itertools = { workspace = true }
fxhash = { workspace = true }

[build-dependencies]
indoc = { workspace = true }
walkdir = { workspace = true }

[[test]]
name = "datatest"
harness = false
